--- a/BlazorRevealed/BlazorRevealed.Api/appsettings.json
+++ b/BlazorRevealed/BlazorRevealed.Api/appsettings.json
@@ -1,10 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=RD1;Initial Catalog=BlazorRevealed;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "JwtSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHARED",
+    "JwtIssuer": "https://localhost",
+    "JwtAudience": "https://localhost",
+    "JwtExpiryInDays": 1
 }
