--- a/BlazorRevealed/BlazorRevealed.Client/BlazorRevealed.Client.csproj
+++ b/BlazorRevealed/BlazorRevealed.Client/BlazorRevealed.Client.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Exe</OutputType>
-    <LangVersion>7.3</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
