--- a/BlazorRevealed/BlazorRevealed.Shared/BlazorRevealed.Shared.csproj
+++ b/BlazorRevealed/BlazorRevealed.Shared/BlazorRevealed.Shared.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
